testdata/golden/sema/valid/directives/stdlib_time_import/main.sg
// Test: stdlib time module import and Duration usage
// Expected: No errors
import stdlib/time;

fn measure() -> time.Duration {
    return time.monotonic_now();
}
